--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,58 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css');
+
+
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+}
+
+.main-sidebar {
+  width: 250px;
+  min-height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
+.content-wrapper {
+  margin-left: 250px;
+  padding: px;
+  width: calc(100% - 250px);
+  background: #ffffff;
+}
+
+
+
+.navbar {
+  position: sticky;
+  top: 0;
+  z-index: 1030;
+}
+/* styles.css */
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  background-color: #f8f9fa;
+
+  background-image: url('/assets/gradient.svg'); /* path relative to index.html */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; 
+}
+
+/* Ensure proper spacing when sidebar is fixed */
+.app-main {
+  margin-left: 250px;
+  padding: 20px;
+}
+
+.sidebar-collapse .app-main {
+  margin-left: 0;
+}
+html, body {
+  height: 100%;
+  margin: 0;
+}
