--- a/src/app/tabledata/tabledata.component.css
+++ b/src/app/tabledata/tabledata.component.css
@@ -72,7 +72,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     width: 100%;
 }
 .box-title{
-    color :white;
+    color :rgb(5, 5, 5);
     font-size: medium;
 }
 
