--- a/src/app/enrollment/enrollment.component.html
+++ b/src/app/enrollment/enrollment.component.html
@@ -1,7 +1,8 @@
 
 <app-navbar></app-navbar>
+
   <div class="container mt-4">
-     <h4 class="mb-3">📋 Voice Enrollment Report</h4>
+     <h4 class="mb-3">📋 Voice Verification Report </h4>
   <div class="row mb-2">
     <div class="col-md-3">
       <label>Start Date</label>
