--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,28 @@
 <div class="login-wrapper">
   <div class="auth-container">
     <img src="assets/key.png" alt="App Logo" class="logo" />
-    <h2>Login</h2>
-    <form (ngSubmit)="onLogin()">
-      <input type="text" [(ngModel)]="username" name="username" placeholder="Username" />
-      <input type="password" [(ngModel)]="password" name="password" placeholder="Password" required />
-      <button type="submit">Login</button>
-      <p>Don't have an account? <a routerLink="/register">Register here</a></p>
+    <h2 class="auth-title">Login</h2>
+
+    <form (ngSubmit)="onLogin()" autocomplete="off">
+      <input
+        type="text"
+        [(ngModel)]="username"
+        name="username"
+        placeholder="Username"
+        required
+      />
+      <input
+        type="password"
+        [(ngModel)]="password"
+        name="password"
+        placeholder="Password"
+        required
+      />
+      <button type="submit">Sign In</button>
+      <p class="register-link">
+        Don't have an account?
+        <a routerLink="/register">Register here</a>
+      </p>
     </form>
   </div>
 </div>
-
