--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,18 +1,22 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
-  <div class="container-fluid">
-    <div class="d-flex justify-content-between align-items-center w-100">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm w-100" >
+  <div class="container-fluid px-3">
+    <div class="d-flex  flex-md-row justify-content-between align-items-center w-100">
       
       <!-- Brand Title -->
-      <a class="navbar-brand fw-bold fs-4 text-primary-emphasis" href="#">
+      <a class="navbar-brand fw-bold fs-4 text-primary-emphasis text-center text-md-start mb-2 mb-md-0" href="#">
         🔉 Voice Biometric Analyzer
       </a>
 
-      <!-- Log-Off Button -->
-     <a class="btn logout-gradient d-flex align-items-center gap-2 px-3 py-2 fw-bold"
-   routerLink="/login">Log-Out  &nbsp;
-  <i class="bi bi-box-arrow-right fs-5 "></i> 
-</a>
+      <!-- Log-Out Button -->
+      <a class="btn logout-gradient d-flex align-items-center justify-content-center gap-2 px-3 py-2 fw-bold"
+         routerLink="/login">
+         
+        <!-- Hidden on small screens -->
+        <span class="d-none d-md-inline">LogOut&nbsp; </span>
 
+        <!-- Icon always visible -->
+        <i class="bi bi-box-arrow-right fs-5"></i>
+      </a>
 
     </div>
   </div>
