--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -56,7 +56,7 @@
 .glass-text {
   font-weight: bold;
   font-size: 1.5rem;
-  background: linear-gradient(90deg, #00fff7, #ff00c8, #00fff7);
+  background: white;
   background-size: 200% auto;
   color: transparent;
   background-clip: text;
