--- a/src/app/barchart/barchart.component.html
+++ b/src/app/barchart/barchart.component.html
@@ -1,6 +1,6 @@
 <div class="box">
     <div class="box-header">
-        <div class="box-title"> Bar Diagram</div>
+        <div class="box-title text-dark "> Bar Diagram</div>
     </div>
     <div style="background-color: transparent;">
   <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'320px'}"></canvasjs-chart>
