--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,8 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-  background-color:rgb(166, 182, 183);
+  background-color:#ffffff;
+  
 
   
   background-repeat: no-repeat;
