--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -9,7 +9,7 @@
   margin: 0;
   padding: 0;
   
-  background-image: url('/assets/gradient.svg'); /* path relative to index.html */
+  /* background-image: url('/assets/gradient.svg'); path relative to index.html */
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover; 
@@ -25,6 +25,12 @@
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
+.auth-title {
+  /* margin-bottom: 25px; */
+  color: #333;
+  font-weight: 600;
+  font-size: 24px;
+}
 .auth-container input {
   width: 100%;
   padding: 10px;
