--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="register-wrapper">
 <div class="auth-container">
   <img src="assets/customer.png" alt="App Logo" class="logo" />
-  <h2>Register</h2>
+<h2 class="auth-title">Register</h2>
   <form>
     <input type="text" placeholder="Username" />
     <input type="email" placeholder="Email" />
