--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,27 +1,26 @@
-
 <app-navbar></app-navbar>
 
 <div id="layoutSidenav_content">
-    <main>
-        <div class="container-fluid px-4">
-            <h1 class="mt-3">Dashboard</h1>
-            
-           <div class="row">
-    <div class="col-xl-3 col-md-6" *ngFor="let stat of stats; let i = index">
-      <div class="card text-white mb-4" [ngClass]="'bg-' + stat.color">
-        <div class="card-body d-flex align-items-center justify-content-center big-number">
-          {{ animatedValues[i] || 0 }}
-        </div>
-        <div class="card-footer d-flex justify-content-center align-items-center">
-  <a class="text-dark text-center fw-bold">{{ stat.label }}</a>
-</div>
+  <main>
+    <div class="container-fluid">
+      <h1 class="mt-3">Dashboard</h1>
 
+      <div class="row">
+        <div class="col-xl-3 col-md-6" *ngFor="let stat of stats; let i = index">
+          <div class="card text-white mb-4" [ngClass]="'bg-' + stat.color">
+            <div class="card-body d-flex align-items-center justify-content-center big-number">
+              {{ animatedValues[i] || 0 }}
+            </div>
+            <div class="card-footer d-flex justify-content-center align-items-center">
+              <a class="text-dark text-center fw-bold">{{ stat.label }}</a>
+            </div>
+
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-            <!-- <div class="row">
+      <!-- <div class="row">
                 <dashboard-ng19-charts></dashboard-ng19-charts> -->
-                <!-- <div class="col-xl-6">
+      <!-- <div class="col-xl-6">
                     <div class="card mb-4">
                         <div class="card-header">
                             <i class="fas fa-chart-area me-1"></i>
@@ -39,20 +38,17 @@
                         <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
                     </div>
                 </div> -->
-            <!-- </div> -->
-           
-        </div>
-    </main>
-    <div class="row">
-  <div class="col-md-6">
-    <app-tabledata></app-tabledata>
-  </div>
-  <div class="col-md-6">
-    <app-barchart></app-barchart>
-  </div>
-</div>
-  
-</div>
+      <!-- </div> -->
 
+    </div>
+  </main>
+  <div class="row">
+    <div class="col-md-6">
+      <app-tabledata></app-tabledata>
+    </div>
+    <div class="col-md-6">
+      <app-barchart></app-barchart>
+    </div>
+  </div>
 
-    
+</div>
