--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -14,6 +14,10 @@
   box-shadow: 0 4px 15px rgba(255, 65, 108, 0.4);
 }
 
+.bg-darks{
+  background-color: black;
+}
+
 .logout-gradient {
   background: linear-gradient(135deg, #007bff, #6610f2);
   color: #fff;
