--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,14 +8,14 @@
         type="text"
         [(ngModel)]="username"
         name="username"
-        placeholder="Username"
+        placeholder="Type your Name"
         required
       />
       <input
         type="password"
         [(ngModel)]="password"
         name="password"
-        placeholder="Password"
+        placeholder="Password  type to    test"
         required
       />
       <button type="submit">Sign In</button>
