--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
     </button>
   </div>
 
-  <!-- <hr class="text-white mx-3" /> -->
+  <hr class="text-white mx-3" />
 
   <!-- Navigation -->
   <ul class="nav nav-pills flex-column mb-auto px-2">
