--- a/src/app/verification/verification.component.html
+++ b/src/app/verification/verification.component.html
@@ -1,4 +1,3 @@
-
 <app-navbar></app-navbar>
 <div class="container mt-4">
   <h4 class="mb-3"> 📋 Voice Enrollment Report</h4>
@@ -22,6 +21,16 @@
     </div>
   </div>
 
+  <!-- Rows per page filter -->
+  <div class="row mb-3">
+    <div class="col-md-2">
+      <label>Rows per page</label>
+      <select class="form-control" [(ngModel)]="pageSize" (change)="onPageChange(1)">
+        <option *ngFor="let size of pageSizeOptions" [value]="size">{{ size }}</option>
+      </select>
+    </div>
+  </div>
+
   <!-- Data Table -->
   <table class="table table-bordered table-striped">
     <thead class="table-dark">
@@ -34,8 +43,8 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of filteredData; let i = index">
-        <td>{{ i + 1 }}</td>
+      <tr *ngFor="let item of paginatedData(); let i = index">
+        <td>{{ (currentPage - 1) * pageSize + i + 1 }}</td>
         <td>{{ item.date | date: 'dd-MM-yyyy hh:mm a' }}</td>
         <td>{{ item.customerId }}</td>
         <td>{{ item.uniqueId }}</td>
@@ -50,4 +59,25 @@
       </tr>
     </tbody>
   </table>
+
+  <!-- Pagination -->
+  <nav *ngIf="filteredData.length > pageSize">
+    <ul class="pagination justify-content-center">
+      <li class="page-item" [class.disabled]="currentPage === 1">
+        <a class="page-link" (click)="onPageChange(currentPage - 1)">Previous</a>
+      </li>
+
+      <li class="page-item" 
+          *ngFor="let page of totalPagesArray()" 
+          [class.active]="page === currentPage">
+        <a class="page-link" (click)="onPageChange(page)">{{ page }}</a>
+      </li>
+
+      <li class="page-item" [class.disabled]="currentPage === totalPages">
+        <a class="page-link" (click)="onPageChange(currentPage + 1)">Next</a>
+      </li>
+    </ul>
+  </nav>
 </div>
+
+<app-footer></app-footer>
