Password placeholder changed

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,7 +15,7 @@
         type="password"
         [(ngModel)]="password"
         name="password"
-        placeholder="Password  type to    test"
+        placeholder="Password  type with  test"
         required
       />
       <button type="submit">Sign In</button>
