--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,28 +1,74 @@
-<div class="login-wrapper">
-  <div class="auth-container">
-    <img src="assets/key.png" alt="App Logo" class="logo" />
-    <h2 class="auth-title">Login</h2>
+<div class="login-container">
+  <!-- Left Section -->
+  <div class="left-section">
+    <div class="brand">
+  <h5 class="tagline">COST EFFECTIVE & SECURE</h5>
+  <h1 class="title">
+    Voice <span class="highlight">Biometrics</span>
+  </h1>
+  <p class="subtitle">
+  
+    Securely access your account with voice Bio Metric
+</div>
 
-    <form (ngSubmit)="onLogin()" autocomplete="off">
-      <input
-        type="text"
-        [(ngModel)]="username"
-        name="username"
-        placeholder="Type your Name"
-        required
-      />
-      <input
-        type="password"
-        [(ngModel)]="password"
-        name="password"
-        placeholder="Password  type with  test"
-        required
-      />
-      <button type="submit">Sign In</button>
-      <p class="register-link">
-        Don't have an account?
-        <a routerLink="/register">Register here</a>
-      </p>
-    </form>
+
+    <div class="login-box">
+      <h3>Log In</h3>
+      <form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm)" autocomplete="off">
+        
+        <!-- Username -->
+        <input
+          type="text"
+          [(ngModel)]="username"
+          name="username"
+          placeholder="Type your Name"
+          required
+          #uname="ngModel"
+        />
+        <div class="error" *ngIf="uname.invalid && (uname.dirty || uname.touched || loginForm.submitted)">
+          Username is required
+        </div>
+
+        <!-- Password -->
+        <input
+  type="password"
+  [(ngModel)]="password"
+  name="password"
+  placeholder="Type a password is test"
+  required
+  minlength="4"
+  #pwd="ngModel"
+  [ngClass]="{ 'shake': shake }"
+/>
+
+<div class="error" *ngIf="!shake && password && password !== 'test'">
+ 
+</div>
+
+
+        <div class="error" *ngIf="pwd.invalid && (pwd.dirty || pwd.touched || loginForm.submitted)">
+          <span *ngIf="pwd.errors?.['required']">Password is required</span>
+          <span *ngIf="pwd.errors?.['minlength']">Password must be at least 4 characters</span>
+        </div>
+
+        <a href="#" class="forgot">Forgot your password?</a>
+
+        <button type="submit" class="btn">Log In</button>
+      </form>
+    </div>
+
+ 
+
+    <footer>
+      <p>© 2025 Ajith, Inc</p>
+    </footer>
+  </div>
+
+  <!-- Right Section -->
+  <div class="right-section">
+    <div class="overlay">
+      <p>Don’t have an account?</p>
+      <a routerLink="/register" class="btn-secondary">Get started</a>
+    </div>
   </div>
 </div>
