--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -55,6 +55,9 @@
 
         <button type="submit" class="btn">Log In</button>
       </form>
+      <p>Don’t have an account?</p>
+      <a routerLink="/register" class="btn-secondary">Get started</a>
+      
     </div>
 
  
