--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,48 +2,34 @@
   <!-- Left Section -->
   <div class="left-section">
     <div class="brand">
-  <h5 class="tagline">COST EFFECTIVE & SECURE</h5>
-  <h1 class="title">
-    Voice <span class="highlight">Biometrics</span>
-  </h1>
-  <p class="subtitle">
-  
-    Securely access your account with voice Bio Metric
-</div>
+      <h5 class="tagline">COST EFFECTIVE & SECURE</h5>
+      <h1 class="title">
+        Voice <span class="highlight">Biometrics</span>
+      </h1>
+      <p class="subtitle">
+
+        Securely access your account with voice Bio Metric
+    </div>
 
 
     <div class="login-box">
       <h3>Log In</h3>
       <form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm)" autocomplete="off">
-        
+
         <!-- Username -->
-        <input
-          type="text"
-          [(ngModel)]="username"
-          name="username"
-          placeholder="Type your Name"
-          required
-          #uname="ngModel"
-        />
+        <input type="text" [(ngModel)]="username" name="username" placeholder="Type your Name" required
+          #uname="ngModel" />
         <div class="error" *ngIf="uname.invalid && (uname.dirty || uname.touched || loginForm.submitted)">
           Username is required
         </div>
 
         <!-- Password -->
-        <input
-  type="password"
-  [(ngModel)]="password"
-  name="password"
-  placeholder="Type a password is test"
-  required
-  minlength="4"
-  #pwd="ngModel"
-  [ngClass]="{ 'shake': shake }"
-/>
+        <input type="password" [(ngModel)]="password" name="password" placeholder="Type a password is test" required
+          minlength="4" #pwd="ngModel" [ngClass]="{ 'shake': shake }" />
 
-<div class="error" *ngIf="!shake && password && password !== 'test'">
- 
-</div>
+        <div class="error" *ngIf="!shake && password && password !== 'test'">
+
+        </div>
 
 
         <div class="error" *ngIf="pwd.invalid && (pwd.dirty || pwd.touched || loginForm.submitted)">
@@ -57,10 +43,10 @@
       </form>
       <p>Don’t have an account?</p>
       <a routerLink="/register" class="btn-secondary">Get started</a>
-      
+
     </div>
 
- 
+
 
     <footer>
       <p>© 2025 Ajith, Inc</p>
